--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,11 @@ jobs:
   dump:
     runs-on: ubuntu-latest
     steps:
-      - name: Dump GitHub context
-        run: echo ${{github.action}}
-      - name: Dump job context
-        run: echo ${{github.sha}}
-      - name: Dump steps context
-        run: echo "<https://github.com/${{ github.actor }}|${{ github.actor }}>
+      - name: zero
+        run: echo ${{ job.status }}
+      - name: one
+        run: echo "<https://github.com/${{ github.actor }}|${{ github.actor }}> shared an unencrypted secret"
+      - name: two
+        run: echo "{emoji} *{workflow}* {status_message} in <{repo_url}|{repo}/{branch}> on <{commit_url}|{commit_sha}>"
+      - name: three
+        run: echo "Linked Repo <{repo_url}|{repo}>"
