--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,5 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: two
-        run: echo "Pull Request URL: https://github.com/${{ github.repository }}/pull/${{ github.sha }}"
+        run: echo "Pull Request URL: https://github.com/${{ github.repository }}/pull/<pr_number>"
 
