--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   scan:
     name: gitleaks
-    runs-on: ubuntu-latests
+    runs-on: ubuntu-latest
     steps:
       - uses: ravsamhq/notify-slack-action@v2
         if: always()
