--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,16 +1,16 @@
-name: gitleaks
+name: Scan Code for Secrets
 on:
-  pull_request:
-    types:
-      - opened
   push:
-  workflow_dispatch:
 
 jobs:
-  dump:
-    runs-on: ubuntu-latest
+  check-for-secrets:
+    runs-on: 'ubuntu-latest'
     steps:
-
-      - name: three
-        run: echo  "${{commit_sha}}"
-
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Run Yelp's detect-secrets
+        uses: RobertFischer/detect-secrets-action@v2.0.0
+      - name: Commit back .secrets.baseline (if it was missing)
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "build(detect-secrets): Commit the newly-generated .secrets.baseline file"
