--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -28,6 +28,7 @@ jobs:
         run: |
            export repo="${{ github.repository }}"
            export workflow_run_id="${{ github.run_id }}"
+           echo "https://api.github.com/repos/$repo/actions/runs/$workflow_run_id/artifacts"
            run_details=$(curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" "https://api.github.com/repos/$repo/actions/runs/$workflow_run_id/artifacts")
            echo "$run_details"
            url=$(echo "$run_details" | jq -r '.artifacts[0].archive_download_url')
